<resources>
    <string name="app_name">Library</string>
    <string name="user_name">user</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
    <string name="user" />
    <string name="select_an_option">Please select an option:</string>
    <string name="list_all_users">List all users</string>
    <string name="list_all_books">List all books</string>
    <string name="search_for_a_user">Search for a user</string>
    <string name="search_for_a_book">Search for a book</string>
    <string name="borrow_a_book">Borrow a book</string>
    <string name="return_a_book">Return a book</string>
    <string name="check_my_loans">Check my loans</string>
    <string name="add_a_user">Add a user</string>
    <string name="remove_a_user">Remove a user</string>
    <string name="add_a_book">Add a book</string>
    <string name="remove_a_book">Remove a book</string>
    <string name="list_books_on_loan">List books on loan</string>
    <string name="list_books_not_on_loan">List books not on loan</string>
    <string name="list_users_with_loans">List users with loans</string>
    <string name="select_search_user_option">Please select an option:</string>
    <string name="search_by_first_name">Search by first name</string>
    <string name="search_by_last_name">Search by last name</string>
    <string name="search_by_id">Search by ID</string>
    <string name="please_enter_a_last_name">Please enter a last name</string>
    <string name="please_enter_an_id_number">Please enter an ID number</string>
    <string name="searchactivity_name">Search Users</string>
    <string name="search_first_activity">Search Users By...</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="list_of_users" />
    <string name="list_of_books" />
    <string name="welcome_to_the_library">Welcome to the library!</string>
    <string name="please_enter_a_first_name">Please enter a first name</string>
    <string name="please_enter_an_id">Please enter an ID</string>
    <string name="enter_user_id">Enter</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_author">Search by author</string>
    <string name="enter_book">Please enter a title</string>
    <string name="please_enter_your_user_id">Please enter your user ID</string>
    <string name="please_enter_a_book_id">Please enter a book ID</string>
    <string name="return_book">Return</string>
    <string name="borrow">Borrow</string>
</resources>
