<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    tools:context=".SearchUserActivity">


    <TextView
        android:id="@+id/search_user_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_search_user_option"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_user_text">

        <RadioButton
            android:id="@+id/user_search_by_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_first_name"
            android:onClick="onRadioSearchUserClicked"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="198dp" />

        <RadioButton
            android:id="@+id/user_search_by_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_last_name"
            android:onClick="onRadioSearchUserClicked"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="281dp" />

        <RadioButton
            android:id="@+id/user_search_by_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_id"
            android:onClick="onRadioSearchUserClicked"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="324dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
